font and selectors

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>Мой первый HTML-документ</title>
 </head>
 <body>
-    <h1>Я успешно создал свой первый документ</h1>
+    <h1 >Я успешно создал свой первый документ</h1>
+    <h1 id="header1">Использую HTML</h1>
     <p>Это мой первый опыт работы с HTML!</p>
     <a href="location.html">Перейти на другую страницу</a>
     <hr/>
@@ -21,7 +23,7 @@
             <td>Данные 2</td>
         </tr>
     </table>
-
+    <hr>
     <form action="/submit" method="POST">
         <label for="username">Имя пользователя:</label>
         <input type="text" id="username" name="username" />
@@ -73,6 +75,18 @@
         <option value="value1">Значение 1</option>
         <option value="value2">Значение 2</option>
     </select>
+
+    <div id="blog">
+        <h1>Latest News</h1>
+        <div>
+            <h1>Today's Weather</h1>
+            <p>The weather will be sunny</p>
+    </div>
+    <p>Subscribe for more news</p>
+    </div>
+    <div id="footer">
+        <h1>Archives</h1>
+    </div>
 
 
 </body>
