--- a/bootstra.html
+++ b/bootstra.html
@@ -5,8 +5,32 @@
     <title>Мой первый HTML-документ</title>
 </head>
 <body>
-    <h1>Учим Бутстрап</h1>
-    <button type="button" class="btn btn-primary">Кнопка</button>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Our Menu</h1>
+                <h2>Falafel</h2>
+                <p>Delicious falafel served with fresh vegetables and tahini sauce.</p>
+                <img src="pic1.png" class="img-fluid" alt="Falafel Image"/>
+                <h2>Hummus</h2>
+                <p>Creamy hummus made from chickpeas, olive oil, and garlic.</p>
+                <img src="pic2.jpg" class="img-fluid" alt="Hummus Image"/>
+            </div>
+            <div class="col">
+                <h2>Prices</h2>
+                <table class="table">
+                    <tr>
+                        <td>Falafel</td>
+                        <td>$5.99</td>
+                    </tr>
+                    <tr>
+                        <td>Hummus</td>
+                        <td>$4.99</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
