--- a/inbox_falafel.html
+++ b/inbox_falafel.html
@@ -75,8 +75,26 @@
                     Try our new Calamari dish today!
                 </div>
             </div>
+
+            <div class="col-6 col-lg-6">
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="addressInput" placeholder="Address">
+                    <label for="addressInput">Enter address</label>
+
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox">
+                        Are you a vegetarian (gay)?
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center">
+                <button type="button" class="btn btn-success">Order Now</button>
+            </div>
+            
         </div>
-    </div>   
+    </div> 
+    <p> </p>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
